# kvm-orchestrator

./: .gitignore  Cargo.toml  README.md  build.rs
libvirt-rs/: Cargo.toml  build.rs
libvirt-rs/src/: connection.rs  domain.rs  lib.rs  sys.rs
protos/: virt_service.proto
src/: client.rs  main.rs
