[package]
name = "kvm-orchestrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kvm-orchestrator"
path = "src/main.rs"

[[bin]]
name = "kvm-orchestrator-client"
path = "src/client.rs"

[dependencies]
libvirtrs = {path="libvirt-rs", package="libvirt-rs"}

serde = { version = "1.0.228", features = ["derive"] }
serde_core = "1.0.228"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
tonic = {version = "0.12", features = ["prost", "router", "server"]}
prost = {version = "0.13", features = ["derive", "std"]}
serde_json = "1.0.140"
tracing = { version = "0.1.16"}
tracing-subscriber = { version = "0.3", features = ["tracing-log", "fmt"]}
dotenv = "0.15.0"


[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
